# s2.cpp

./: CMakeLists.txt  README.md
ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
ggml/src/: Makefile  cmake_install.cmake  libggml-base.so.0.9.8  libggml-cpu.so.0.9.8  libggml.so.0.9.8
ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
ggml/src/ggml-vulkan/: Makefile  add.comp.cpp  arange.comp.cpp  cmake_install.cmake  copy_to_quant.comp.cpp  dequant_q2_k.comp.cpp  dequant_q4_1.comp.cpp  dequant_q4_k.comp.cpp  dequant_q5_1.comp.cpp  dequant_q5_k.comp.cpp  diag.comp.cpp  elu.comp.cpp  flash_attn.comp.cpp  flash_attn_mask_opt.comp.cpp  flash_attn_split_k_reduce.comp.cpp  gated_delta_net.comp.cpp  geglu.comp.cpp  geglu_erf.comp.cpp  gelu.comp.cpp  gelu_erf.comp.cpp  ggml-vulkan.cpp  group_norm.comp.cpp  l2_norm.comp.cpp  leaky_relu.comp.cpp  libggml-vulkan.so.0  mul_mat_vec_iq1_m.comp.cpp  mul_mat_vec_iq1_s.comp.cpp  mul_mat_vec_iq2_s.comp.cpp  mul_mat_vec_iq2_xs.comp.cpp  mul_mat_vec_iq2_xxs.comp.cpp  mul_mat_vec_iq3_s.comp.cpp  mul_mat_vec_iq3_xxs.comp.cpp  mul_mat_vec_nc.comp.cpp  mul_mat_vec_q2_k.comp.cpp  mul_mat_vec_q3_k.comp.cpp  mul_mat_vec_q4_k.comp.cpp  mul_mat_vec_q5_k.comp.cpp  mul_mat_vec_q6_k.comp.cpp  norm.comp.cpp  opt_step_adamw.comp.cpp  (+22 more)
ggml/src/ggml-vulkan/vulkan-shaders-gen-prefix/src/vulkan-shaders-gen-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  vulkan-shaders-gen
ggml/src/ggml-vulkan/vulkan-shaders-gen-prefix/src/vulkan-shaders-gen-stamp/: vulkan-shaders-gen-source_dirinfo.txt
ggml/src/ggml-vulkan/vulkan-shaders-gen-prefix/tmp/: vulkan-shaders-gen-cfgcmd.txt  vulkan-shaders-gen-mkdirs.cmake
ggml/src/ggml-vulkan/vulkan-shaders.spv/: add_rms_f16_f16_f16.spv  add_rms_f16_f16_f32.spv  add_rms_f16_f32_f16.spv  add_rms_f16_f32_f32.spv  add_rms_f32_f16_f16.spv  add_rms_f32_f16_f32.spv  add_rms_f32_f32_f16.spv  add_rms_f32_f32_f32.spv  arange_f32.spv  cpy_f32_iq4_nl.spv  cpy_f32_q4_0.spv  cpy_f32_q4_1.spv  cpy_f32_q5_0.spv  cpy_f32_q5_1.spv  dequant_q2_k.spv  dequant_q4_1.spv  dequant_q4_k.spv  dequant_q5_1.spv  dequant_q5_k.spv  diag_f16.spv  elu_f16.spv  elu_f32.spv  fa_mask_opt.spv  fa_split_k_reduce.spv  flash_attn_f32_f16_f16.spv  flash_attn_f32_f16_f16_f16acc.spv  flash_attn_f32_f16_f16_fp32.spv  flash_attn_f32_f16_f32.spv  flash_attn_f32_f16_f32_f16acc.spv  flash_attn_f32_f16_f32_f16acc_fp32.spv  flash_attn_f32_f16_q4_0.spv  flash_attn_f32_f16_q4_0_f16acc.spv  flash_attn_f32_f16_q4_0_fp32.spv  flash_attn_f32_f16_q8_0.spv  flash_attn_f32_f16_q8_0_f16acc.spv  flash_attn_f32_f16_q8_0_f16acc_fp32.spv  gated_delta_net_f32.spv  geglu_erf_f16.spv  geglu_erf_f32.spv  geglu_f16.spv  (+1069 more)
include/: s2_codec.h  s2_model.h  s2_pipeline.h
src/: base64.h  main.cpp  s2_codec.cpp  s2_model.cpp  s2_pipeline.cpp  s2_prompt.cpp
